force-app/main/default/objects/Di_Idea_History__c/Di_Idea_History__c.object-meta.xml
<CustomObject>
    <label>Idea History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Idea #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Idea History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>