force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_Id__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Idea Id</label>
    <referenceTo>Idea</referenceTo>
    <relationshipName>Idea_History</relationshipName>
    <type>Lookup</type>
</CustomField>