force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_NEW_Alt_3rd_Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_NEW_Alt_3rd_Product_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NEW Alt 3rd Product Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ideas5</relationshipName>
    <type>Lookup</type>
</CustomField>