force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_NEW_Category__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_NEW_Category__c</fullName>
    <label>NEW Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH and Wires</fullName>
            </value>
            <value>
                <fullName>Admin Platform User Management and Security</fullName>
            </value>
            <value>
                <fullName>Alerts</fullName>
            </value>
            <value>
                <fullName>Authentication &amp; Settings</fullName>
            </value>
            <value>
                <fullName>Bill Pay</fullName>
            </value>
            <value>
                <fullName>Branding and Flexibility</fullName>
            </value>
            <value>
                <fullName>Check/Deposit Imaging</fullName>
            </value>
            <value>
                <fullName>Create Your Own/SSO and API Integration</fullName>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Deposit Accounts</fullName>
            </value>
            <value>
                <fullName>End User Support</fullName>
            </value>
            <value>
                <fullName>Entitlements</fullName>
            </value>
            <value>
                <fullName>External Funds Transfer</fullName>
            </value>
            <value>
                <fullName>FinanceWorks</fullName>
            </value>
            <value>
                <fullName>General Admin Platform</fullName>
            </value>
            <value>
                <fullName>General Business Banking</fullName>
            </value>
            <value>
                <fullName>General Digital Banking</fullName>
            </value>
            <value>
                <fullName>General Payments</fullName>
            </value>
            <value>
                <fullName>Idea Exchange</fullName>
            </value>
            <value>
                <fullName>Interfaces</fullName>
            </value>
            <value>
                <fullName>Online Account Opening</fullName>
            </value>
            <value>
                <fullName>Online Statements</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Accounts</fullName>
            </value>
            <value>
                <fullName>Pop Money</fullName>
            </value>
            <value>
                <fullName>Promotion Suite</fullName>
            </value>
            <value>
                <fullName>Purchase Rewards</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Remote Deposit</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>