force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_NEW_Featured_Flag__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_NEW_Featured_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NEW Featured Flag</label>
    <type>Checkbox</type>
</CustomField>