force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_NEW_Internal_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_NEW_Internal_Category_Name__c</fullName>
    <label>NEW Internal Category Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online Banking</fullName>
            </value>
            <value>
                <fullName>SMS Banking</fullName>
            </value>
            <value>
                <fullName>Unified Single Platform</fullName>
            </value>
            <value>
                <fullName>Home/History Page</fullName>
            </value>
            <value>
                <fullName>Foreign Language</fullName>
            </value>
            <value>
                <fullName>Turbo Tax</fullName>
            </value>
            <value>
                <fullName>DI labs</fullName>
            </value>
            <value>
                <fullName>Online Deposit Accounts</fullName>
            </value>
            <value>
                <fullName>Online Other Accounts</fullName>
            </value>
            <value>
                <fullName>End User Authentication</fullName>
            </value>
            <value>
                <fullName>My Settings</fullName>
            </value>
            <value>
                <fullName>FinanceWorks</fullName>
            </value>
            <value>
                <fullName>Alerts</fullName>
            </value>
            <value>
                <fullName>Internal Transfers</fullName>
            </value>
            <value>
                <fullName>Scheduled and Recurring Transfers</fullName>
            </value>
            <value>
                <fullName>Intra-Institution Transfers</fullName>
            </value>
            <value>
                <fullName>Integrated Online Statements</fullName>
            </value>
            <value>
                <fullName>Fiserv Online Statements</fullName>
            </value>
            <value>
                <fullName>Infoimage Online Statements</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Shared Access</fullName>
            </value>
            <value>
                <fullName>Ensenta MyDeposit</fullName>
            </value>
            <value>
                <fullName>LivePerson Secure Support</fullName>
            </value>
            <value>
                <fullName>Web/Direct Connect</fullName>
            </value>
            <value>
                <fullName>Check/Deposit Imaging</fullName>
            </value>
            <value>
                <fullName>Mobile Apps iOS</fullName>
            </value>
            <value>
                <fullName>Mobile Apps Android</fullName>
            </value>
            <value>
                <fullName>Mobile Browser</fullName>
            </value>
            <value>
                <fullName>Mobile Deposit Accounts</fullName>
            </value>
            <value>
                <fullName>Mobile Other Accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>