force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_NEW_Jira_Number__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_NEW_Jira_Number__c</fullName>
    <label>NEW Jira Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>