force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_NEW_Product_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_NEW_Product_Manager_Name__c</fullName>
    <label>NEW Product Manager Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aaron Oplinger</fullName>
            </value>
            <value>
                <fullName>Alysann Fackler</fullName>
            </value>
            <value>
                <fullName>Barbara Hon</fullName>
            </value>
            <value>
                <fullName>Bhavna Virmani</fullName>
            </value>
            <value>
                <fullName>Bo Bedingfield</fullName>
            </value>
            <value>
                <fullName>Braxton Caswell</fullName>
            </value>
            <value>
                <fullName>Brett Conoly</fullName>
            </value>
            <value>
                <fullName>Calvin Grimes</fullName>
            </value>
            <value>
                <fullName>Christina Johnson</fullName>
            </value>
            <value>
                <fullName>Christopher Hoffmann</fullName>
            </value>
            <value>
                <fullName>Clay Gross</fullName>
            </value>
            <value>
                <fullName>Craig Heath</fullName>
            </value>
            <value>
                <fullName>Danny Fuhriman</fullName>
            </value>
            <value>
                <fullName>Dan Weis</fullName>
            </value>
            <value>
                <fullName>Diane Atkins</fullName>
            </value>
            <value>
                <fullName>Elena Bazina</fullName>
            </value>
            <value>
                <fullName>Gary Mason</fullName>
            </value>
            <value>
                <fullName>Glen Sharon</fullName>
            </value>
            <value>
                <fullName>Jay Quint</fullName>
            </value>
            <value>
                <fullName>Judy Shieh</fullName>
            </value>
            <value>
                <fullName>Karlo Ilagan</fullName>
            </value>
            <value>
                <fullName>Katherine Jansen</fullName>
            </value>
            <value>
                <fullName>Kyle King</fullName>
            </value>
            <value>
                <fullName>Lindsey Speranza</fullName>
            </value>
            <value>
                <fullName>Maria C Wolfe</fullName>
            </value>
            <value>
                <fullName>Mary Kate Perry</fullName>
            </value>
            <value>
                <fullName>Patti Holcombe</fullName>
            </value>
            <value>
                <fullName>Pratik Patel</fullName>
            </value>
            <value>
                <fullName>Rhonda Whitaker</fullName>
            </value>
            <value>
                <fullName>Sarah Ablett</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>