force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_NEW_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_NEW_Release_Date__c</fullName>
    <description>Qtr/Yr : xx/xxxx</description>
    <inlineHelpText>Qtr/Yr :xx/xxxx</inlineHelpText>
    <label>NEW DI Release Date</label>
    <length>7</length>
    <type>Text</type>
</CustomField>