force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_NEW_Title__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_NEW_Title__c</fullName>
    <label>NEW Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>