force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_OLD_Alt_1st_Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_OLD_Alt_1st_Product_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OLD Alt 1st Product Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ideas6</relationshipName>
    <type>Lookup</type>
</CustomField>