force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_OLD_Body__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_OLD_Body__c</fullName>
    <label>OLD Idea Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>