force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_OLD_Channel__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_OLD_Channel__c</fullName>
    <label>OLD Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>