force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_OLD_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_OLD_Due_Date__c</fullName>
    <label>OLD Due Date</label>
    <type>DateTime</type>
</CustomField>