force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_OLD_Featured_Image__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_OLD_Featured_Image__c</fullName>
    <label>OLD Featured Image</label>
    <type>Url</type>
</CustomField>