force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_OLD_Product_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_OLD_Product_Manager_Email__c</fullName>
    <label>OLD Product Manager Email</label>
    <type>Email</type>
</CustomField>