force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_OLD_Release_Number__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_OLD_Release_Number__c</fullName>
    <label>OLD DI Release Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>