force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_OLD_SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_OLD_SLA_Status__c</fullName>
    <label>OLD SLA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SLA 1 Voilated</fullName>
            </value>
            <value>
                <fullName>SLA 2 Voilated</fullName>
            </value>
            <value>
                <fullName>SLA 3 Voilated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>