force-app/main/default/objects/Di_Idea_History__c/fields/Di_Idea_OLD_Status__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_OLD_Status__c</fullName>
    <label>OLD Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under Point Threshold</fullName>
            </value>
            <value>
                <fullName>Product Team Review</fullName>
            </value>
            <value>
                <fullName>Under Analysis</fullName>
            </value>
            <value>
                <fullName>Additional Information Required</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Not Planned</fullName>
            </value>
            <value>
                <fullName>Future Consideration</fullName>
            </value>
            <value>
                <fullName>Release Scheduled</fullName>
            </value>
            <value>
                <fullName>Existing Feature</fullName>
            </value>
            <value>
                <fullName>Release Deployed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>