force-app/main/default/objects/Di_Idea_History__c/fields/Is_Product_Manager_Changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Product_Manager_Changed__c</fullName>
    <description>This field determines that user has changed the Product Manager on Idea record or not.</description>
    <formula>TEXT(Di_Idea_NEW_Product_Manager_Name__c) &lt;&gt;  TEXT(Di_Idea_OLD_Product_Manager_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Product Manager Changed</label>
    <type>Checkbox</type>
</CustomField>